--- a/src/visao/ConsultarClientes.form
+++ b/src/visao/ConsultarClientes.form
@@ -71,7 +71,7 @@
             <Component class="javax.swing.JTable" name="jtClientes">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Segoe UI Semilight" size="14" style="1"/>
+                  <Font name="Yu Gothic UI Semilight" size="14" style="1"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="7" rowCount="0">
