--- a/src/visao/ConsultarVeiculos.form
+++ b/src/visao/ConsultarVeiculos.form
@@ -70,6 +70,9 @@
           <SubComponents>
             <Component class="javax.swing.JTable" name="jtVeiculos">
               <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Yu Gothic UI Semilight" size="14" style="1"/>
+                </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="6" rowCount="0">
                     <Column editable="false" title="ID" type="java.lang.Object"/>
