--- a/src/visao/CriarOrdemServico.form
+++ b/src/visao/CriarOrdemServico.form
@@ -276,11 +276,10 @@
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-                      <StringArray count="4">
+                      <StringArray count="3">
                         <StringItem index="0" value="--Selecione--"/>
                         <StringItem index="1" value="Aberto"/>
-                        <StringItem index="2" value="Fechado"/>
-                        <StringItem index="3" value="EM Andamento"/>
+                        <StringItem index="2" value="em Andamento"/>
                       </StringArray>
                     </Property>
                   </Properties>
